# opengl_training

./: CMakeLists.txt
resources/shaders/: point.vert
src/: Object.h  Shape.h  Window.h  main.cpp
